<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <!-- Search term edit text -->
    <EditTextPreference
        android:defaultValue="@string/settings_search_term_default"
        android:inputType="textNoSuggestions"
        android:key="@string/settings_search_term_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_search_term_label" />

    <!-- Page size edit text -->
    <EditTextPreference
        android:defaultValue="@string/settings_page_size_default"
        android:inputType="textNoSuggestions"
        android:key="@string/settings_page_size_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_page_size_label" />

    <!-- Order by list preference -->
    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

</PreferenceScreen>